<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_game"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="#202020"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soul.yalatruth.Game">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:text="@string/Scores"
            android:layout_width="90dp"
            android:layout_gravity="right"
            android:layout_height="25dp"
            android:id="@+id/scorebtn"
            android:layout_weight="0.07"
            android:textColor="#FFFFFF"
            android:onClick="goto_score"
            android:textStyle="normal|bold"
            android:backgroundTint="@color/colorPrimary"
            android:textSize="15sp"
            android:elevation="0dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a0"
            android:textColor="@color/green_add"
            android:layout_gravity="center"
            android:textSize="35sp"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a1"
            android:textColor="#FFFFFF"
           android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:textAllCaps="true" />

        <TextView
            android:text="@string/Asks"
            android:layout_width="74dp"
            android:layout_height="wrap_content"
            android:id="@+id/a2"
            android:textColor="#FF0000"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:textSize="25sp"
            android:fontFamily="sans-serif"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/a3"
            android:textColor="#FFFFFF"
            android:layout_gravity="center"
            android:textSize="25sp"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:textAllCaps="true" />

        <TextView
            android:layout_width="168dp"
            android:layout_height="wrap_content"
            android:id="@+id/a4"
            android:textColor="#FFFFFF"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:fontFamily="sans-serif"
            android:text="@string/Choose" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q1"
            android:onClick="q1_click"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/q2"
            android:onClick="q2_click"
            />

        <TableRow
            android:layout_width="190dp"
            android:layout_height="61dp"
            android:layout_gravity="center"
            android:layout_weight="0.05">

            <Button
                android:text="@string/Answered"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/butans"
                android:onClick="ans_click"
                android:backgroundTint="@color/green_add"
                android:textStyle="normal|bold"
                android:textColor="#FFFFFF" />

            <Button
                android:text="@string/Passed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/butpass"
                android:onClick="pass_click"
                android:backgroundTint="#FF0000"
                android:textSize="14sp"
                android:textStyle="normal|bold"
                android:textColor="#FFFFFF" />
        </TableRow>

    </LinearLayout>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>
