<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_select__players"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="#202020"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="soul.yalatruth.Select_Players">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/mylin"></LinearLayout>

            <Button
                android:text="@string/Add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2"

                android:backgroundTint="@color/green_add"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:layout_marginLeft="94dp"
                android:onClick="add_click"
                android:textAllCaps="false"
                android:textStyle="normal|bold" />

            <Button
                android:text="@string/Start"
                android:layout_width="98dp"
                android:layout_marginLeft="115dp"
                android:layout_height="wrap_content"
                android:id="@+id/button3"
                android:backgroundTint="@color/colorPrimary"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:onClick="goto_game"
                android:textStyle="normal|bold"
                android:textAllCaps="false" />

        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner">
    </com.google.android.gms.ads.AdView>


</RelativeLayout>
